# sqlite3

./: CMakeLists.txt  README.md  SQLite3Config.cmake.in  SQLite3ConfigVersion.cmake.in
cmake/: FindSQLite3.cmake
src/: CMakeLists.txt  config.h.in
tools/: CMakeLists.txt
tools/shell/: CMakeLists.txt
